--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,41 @@ body {
 .btn:hover {
   background: #3c2c3e;
   text-decoration: underline;
+  transition: 0.3s;
+}
+
+.btn-try,
+.btn-try-ghost {
+  background: rgba(246, 246, 246, 0.3);
+  padding: 12px 40px;
+  border-radius: 20px;
+  cursor: pointer;
+  border: none;
+  color: rgb(246, 246, 246);
+  font-weight: 500;
+  font-size: 1rem;
+}
+
+.btn-try {
+  background: rgb(246, 246, 246);
+  color: #4b5d67;
+}
+
+.btn-try:hover {
+  background: #3c2c3e;
+  color: rgb(246, 246, 246);
+  transition: 0.3s;
+}
+
+.btn-try-ghost {
+  background: transparent;
+  border: 2px solid white;
+  color: rgb(246, 246, 246);
+}
+
+.btn-try-ghost:hover {
+  background: #4b5d67;
+  transition: 0.3s;
 }
 /* Utility Classes End Here */
 /* Navbar Starts Here */
@@ -69,9 +104,63 @@ body {
   height: calc(100vh - 90px);
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .info-section {
-  border: 3px solid pink;
-  width: 80%;
+  /* border: 3px solid pink; */
+  width: 78%;
+}
+
+.info-section h1 {
+  color: rgb(246, 246, 246);
+  font-size: 4.2rem;
+  font-weight: 500;
+  line-height: 0.9;
+  margin-bottom: 2rem;
+}
+
+.info-section h4 {
+  font-size: 2rem;
+  color: rgb(246, 246, 246);
+  font-weight: normal;
+  margin-bottom: 2rem;
+}
+
+.info-section .button-section {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.button-section {
+  margin-bottom: 20px;
+}
+
+.disclaimer {
+  font-weight: 300;
+  color: white;
+  font-size: 8px;
+}
+
+.disclaimer-section h6 {
+  padding-top: 20px;
+}
+/* Home Section Ends Here */
+
+/* Photos Section Starts Here */
+.photos-section {
+  max-width: 50vw;
+  max-height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-bottom: 100px;
+}
+
+.photos img {
+  margin: 10px 25px;
+  border: 3px solid #000;
+  box-shadow: 3px 3px 8px 0px rgba(0, 0, 0, 0.3);
+  max-width: 25vw;
 }
