--- a/css/styles.css
+++ b/css/styles.css
@@ -164,3 +164,9 @@ body {
   box-shadow: 3px 3px 8px 0px rgba(0, 0, 0, 0.3);
   max-width: 25vw;
 }
+/* Photos End Here */
+.media-icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
