--- a/css/styles.css
+++ b/css/styles.css
@@ -150,8 +150,8 @@ body {
 
 /* Photos Section Starts Here */
 .photos-section {
-  max-width: 50vw;
-  max-height: 100%;
+  /* max-width: 50vw; */
+  /* max-height: 100%; */
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -162,7 +162,7 @@ body {
   margin: 10px 25px;
   border: 3px solid #000;
   box-shadow: 3px 3px 8px 0px rgba(0, 0, 0, 0.3);
-  max-width: 25vw;
+  /* max-width: 25vw; */
 }
 /* Photos End Here */
 .media-icons .icons {
