--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ body {
 
 /* Home Section Starts Here */
 #home {
-  height: calc(100vh - 90px);
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -150,6 +150,7 @@ body {
 
 /* Photos Section Starts Here */
 .photos-section {
+  /* border: 2px solid white; */
   /* max-width: 50vw; */
   /* max-height: 100%; */
   display: flex;
